--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky",
-    "postversion": "git push --tags && yarn publish . --tag $npm_package_version && git push && echo \"Successfully released version $npm_package_version!\"",
-    "prepush-hook": "git-branch-is main && yarn version --patch || yarn --no-git-tag-version version --patch",
-    "postmerge-hook": "git-branch-is main && yarn version --patch || yarn --no-git-tag-version version --patch"
+    "postversion": "git push --tags && yarn publish . --tag $npm_package_version+1 && git push && echo \"Successfully released version $npm_package_version+1!\""
   },
   "dependencies": {
     "@types/node": "20.5.9",
@@ -33,14 +31,19 @@
     "typescript": "5.2.2",
     "yup": "^1.2.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-push": "yarn prepush-hook",
-      "post-merge": "yarn postmerge-hook"
-    }
-  },
+  
+   
+  
   "devDependencies": {
     "git-branch-is": "^4.0.0",
     "husky": "^9.0.11"
-  }
+  },
+  
+  "husky": {
+        "hooks": {
+            "post-merge": "(git-branch-is master && yarn version --patch || (yarn --no-git-tag-version version patch)",
+            "pre-push": "(git-branch-is master && yarn version --patch || (yarn --no-git-tag-version version patch)"
+        }
+    }
+  
 }
