--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "fadak-user-registry",
-  "version": "0.1.5",
+  "version": "0.1.3",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install",
-    "postversion": "git push --tags && yarn publish . --tag $npm_package_version+1 && git push && echo \"Successfully released version $npm_package_version+1!\""
+    "prepare": "husky install"
+   
   },
   "dependencies": {
     "@types/node": "20.5.9",
