--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky",
+    "postversion": "git push --tags  . --tag $npm_package_version+1 && git push && echo \"Successfully released version $npm_package_version+1!\""
   },
   "dependencies": {
     "@types/node": "20.5.9",
