--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky",
-    "postversion": "git push --tags && yarn publish . --tag $npm_package_version && git push && echo \"Successfully released version $npm_package_version!\"",
-    "prepush-hook": "git-branch-is master && yarn version --patch || yarn --no-git-tag-version version --patch",
-    "postmerge-hook": "git-branch-is master && yarn version --patch || yarn --no-git-tag-version version --patch"
+    "prepare": "husky"
+    
   },
   "dependencies": {
     "@types/node": "20.5.9",
